--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ title = "Raymond M. Serrato"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://raymondmserrato.com/"
+baseurl = "https://raymserrato.com/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
